--- a/main.html
+++ b/main.html
@@ -7,7 +7,22 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
+	<div class="main">
+        <div class="ryu">
+            <div class="ryu-still"></div>
+            <div class="ryu-ready"></div>
+            <div class="ryu-throwing"></div>
+            <div class="ryu-cool"></div>
+        </div>
+        <div class="hadouken">
+        </div>
+        <div class="instructions">
+            <p class="throwing">Click on Ryu to make him throw a hadouken!</p>
+            <p class="cooling">Press and hold the "x" key to make Ryu adopt his cool pose!</p>
+        </div>
+    </div>
+    <audio id="hadouken-sound" src="sound/hadouken.mp3">
+
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
